--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^11.8.1",
     "gh-pages": "^6.3.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
